// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Snapshot: FlightsExplorer matches snapshot 1`] = `
<div
  class="bg-white rounded-lg border border-gray-200 p-4 space-y-4"
>
  <div
    class="flex flex-wrap gap-2"
  >
    <button
      class="px-3 py-1.5 text-sm rounded-lg border transition-colors border-gray-300 text-gray-600 hover:bg-gray-50"
    >
      presetToday
    </button>
    <button
      class="px-3 py-1.5 text-sm rounded-lg border transition-colors border-gray-300 text-gray-600 hover:bg-gray-50"
    >
      presetBestMonth
    </button>
    <button
      class="px-3 py-1.5 text-sm rounded-lg border transition-colors border-gray-300 text-gray-600 hover:bg-gray-50"
    >
      presetTop100
    </button>
    <button
      class="px-3 py-1.5 text-sm rounded-lg border transition-colors border-gray-300 text-gray-600 hover:bg-gray-50"
    >
      presetClub100k
    </button>
  </div>
  <div
    class="flex flex-wrap gap-2 items-end"
  >
    <div>
      <label
        class="block text-xs text-gray-500 mb-1"
      >
        Pilot
      </label>
      <input
        class="px-2 py-1.5 text-sm border border-gray-300 rounded w-32"
        placeholder="..."
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        class="block text-xs text-gray-500 mb-1"
      >
        Takeoff
      </label>
      <input
        class="px-2 py-1.5 text-sm border border-gray-300 rounded w-32"
        placeholder="..."
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        class="block text-xs text-gray-500 mb-1"
      >
        dateRange
      </label>
      <div
        class="flex gap-1"
      >
        <input
          class="px-2 py-1.5 text-sm border border-gray-300 rounded"
          type="date"
          value=""
        />
        <input
          class="px-2 py-1.5 text-sm border border-gray-300 rounded"
          type="date"
          value=""
        />
      </div>
    </div>
    <div>
      <label
        class="block text-xs text-gray-500 mb-1"
      >
        distanceRange
      </label>
      <div
        class="flex gap-1 items-center"
      >
        <input
          class="px-2 py-1.5 text-sm border border-gray-300 rounded w-20"
          placeholder="Min"
          type="number"
          value=""
        />
        <span
          class="text-gray-400"
        >
          -
        </span>
        <input
          class="px-2 py-1.5 text-sm border border-gray-300 rounded w-20"
          placeholder="Max"
          type="number"
          value=""
        />
      </div>
    </div>
    <div>
      <label
        class="block text-xs text-gray-500 mb-1"
      >
        gliderCategory
      </label>
      <select
        class="px-2 py-1.5 text-sm border border-gray-300 rounded"
      >
        <option
          value=""
        >
          All
        </option>
        <option
          value="A"
        >
          A
        </option>
        <option
          value="B"
        >
          B
        </option>
        <option
          value="C"
        >
          C
        </option>
        <option
          value="D"
        >
          D
        </option>
        <option
          value="Z"
        >
          Z
        </option>
        <option
          value="T"
        >
          T
        </option>
      </select>
    </div>
    <button
      class="px-4 py-1.5 text-sm bg-blue-600 text-white rounded-lg hover:bg-blue-700"
    >
      filters
    </button>
  </div>
  <div
    class="text-sm text-gray-500"
  >
    2
     
    wings
     · page 
    1
    /
    1
  </div>
  <div
    class="overflow-auto max-h-[70vh]"
  >
    <table
      class="w-full text-sm"
    >
      <thead>
        <tr>
          <th
            class="px-2 py-2 text-left text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Date
             
          </th>
          <th
            class="px-2 py-2 text-left text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Pilot
             
          </th>
          <th
            class="px-2 py-2 text-left text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Takeoff
             
          </th>
          <th
            class="px-2 py-2 text-left text-xs font-medium text-gray-500 sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Glider
          </th>
          <th
            class="px-2 py-2 text-left text-xs font-medium text-gray-500 sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Type
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Distance
             
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Score
             
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Duration
             
          </th>
        </tr>
      </thead>
      <tbody
        class="divide-y divide-gray-100"
      >
        <tr
          class="hover:bg-gray-50"
        >
          <td
            class="px-2 py-2 text-gray-700 whitespace-nowrap"
          >
            <a
              class="hover:underline"
              href="https://xcontest.org/flight/1001"
              rel="noopener noreferrer"
              target="_blank"
            >
              08.07.2025
            </a>
          </td>
          <td
            class="px-2 py-2"
          >
            <a
              class="text-blue-600 hover:underline"
              href="/pilots/ion.popescu"
            >
              Ion Popescu
            </a>
          </td>
          <td
            class="px-2 py-2"
          >
            <a
              class="text-blue-600 hover:underline"
              href="/takeoffs/2-sticlaria"
            >
              Sticlaria
            </a>
          </td>
          <td
            class="px-2 py-2 text-gray-700"
          >
            Advance Omega X-Alps 4
            <span
              class="ml-1 px-1 py-0.5 bg-gray-100 rounded text-[10px]"
            >
              D
            </span>
          </td>
          <td
            class="px-2 py-2 text-gray-500 text-xs"
          >
            FAI triangle
          </td>
          <td
            class="px-2 py-2 font-medium text-right"
          >
            312.5
             km
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            420.5
          </td>
          <td
            class="px-2 py-2 text-gray-500 text-right"
          >
            8h 0m
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50"
        >
          <td
            class="px-2 py-2 text-gray-700 whitespace-nowrap"
          >
            <a
              class="hover:underline"
              href="https://xcontest.org/flight/1002"
              rel="noopener noreferrer"
              target="_blank"
            >
              08.07.2025
            </a>
          </td>
          <td
            class="px-2 py-2"
          >
            <a
              class="text-blue-600 hover:underline"
              href="/pilots/maria.ionescu"
            >
              Maria Ionescu
            </a>
          </td>
          <td
            class="px-2 py-2"
          >
            <a
              class="text-blue-600 hover:underline"
              href="/takeoffs/1-bunloc"
            >
              Bunloc
            </a>
          </td>
          <td
            class="px-2 py-2 text-gray-700"
          >
            Nova Mentor 7
            <span
              class="ml-1 px-1 py-0.5 bg-gray-100 rounded text-[10px]"
            >
              B
            </span>
          </td>
          <td
            class="px-2 py-2 text-gray-500 text-xs"
          >
            free flight
          </td>
          <td
            class="px-2 py-2 font-medium text-right"
          >
            45.3
             km
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            52.1
          </td>
          <td
            class="px-2 py-2 text-gray-500 text-right"
          >
            3h 0m
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Snapshot: PilotsTable matches snapshot 1`] = `
<div>
  <div
    class="flex flex-wrap gap-2 mb-3"
  >
    <input
      class="px-3 py-1.5 text-sm border border-gray-300 rounded-lg focus:ring-1 focus:ring-blue-500"
      placeholder="Search..."
      type="text"
      value=""
    />
    <label
      class="flex items-center gap-1 text-sm text-gray-600"
    >
      Min flights
      :
      <input
        class="w-16 px-2 py-1 text-sm border border-gray-300 rounded"
        min="0"
        type="number"
        value=""
      />
    </label>
  </div>
  <div
    class="text-sm text-gray-500 mb-2"
  >
    2
     pilots
  </div>
  <div
    class="overflow-auto max-h-[70vh]"
  >
    <table
      class="w-full text-sm"
    >
      <thead>
        <tr>
          <th
            class="px-2 py-2 text-left text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Name
             
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Flights
             
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Total KM
             
            ↓
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Total Score
             
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Avg Distance
             
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Personal Record
             
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Active Years
             
          </th>
          <th
            class="px-2 py-2 text-left text-xs font-medium text-gray-500 sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Favorite Site
          </th>
          <th
            class="px-2 py-2 text-left text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Last Flight
             
          </th>
        </tr>
      </thead>
      <tbody
        class="divide-y divide-gray-100"
      >
        <tr
          class="hover:bg-gray-50"
        >
          <td
            class="px-2 py-2"
          >
            <a
              class="text-blue-600 hover:underline font-medium"
              href="/pilots/ion.popescu"
            >
              Ion Popescu
            </a>
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            450
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            12,500.5
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            18,000.2
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            27.8
          </td>
          <td
            class="px-2 py-2 font-medium text-right"
          >
            312.5
             km
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            10
          </td>
          <td
            class="px-2 py-2 text-sm"
          >
            <a
              class="text-blue-600 hover:underline"
              href="/takeoffs/1-bunloc"
            >
              Bunloc
            </a>
          </td>
          <td
            class="px-2 py-2 text-gray-500 text-xs whitespace-nowrap"
          >
            01.12.2025
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50"
        >
          <td
            class="px-2 py-2"
          >
            <a
              class="text-blue-600 hover:underline font-medium"
              href="/pilots/maria.ionescu"
            >
              Maria Ionescu
            </a>
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            120
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            3,200
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            5,600
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            26.7
          </td>
          <td
            class="px-2 py-2 font-medium text-right"
          >
            185.3
             km
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            5
          </td>
          <td
            class="px-2 py-2 text-sm"
          >
            <a
              class="text-blue-600 hover:underline"
              href="/takeoffs/2-sticlaria"
            >
              Sticlaria
            </a>
          </td>
          <td
            class="px-2 py-2 text-gray-500 text-xs whitespace-nowrap"
          >
            15.11.2025
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Snapshot: TakeoffsTable matches snapshot 1`] = `
<div>
  <div
    class="flex flex-wrap gap-2 mb-3"
  >
    <input
      class="px-3 py-1.5 text-sm border border-gray-300 rounded-lg focus:ring-1 focus:ring-blue-500 focus:border-blue-500"
      placeholder="Search..."
      type="text"
      value=""
    />
    <label
      class="flex items-center gap-1.5 text-sm text-gray-600"
    >
      <input
        type="checkbox"
      />
      Flyable now
    </label>
    <select
      class="px-2 py-1.5 text-sm border border-gray-300 rounded-lg"
    >
      <option
        value="all"
      >
        All
      </option>
      <option
        value="active"
      >
        Active only
      </option>
      <option
        value="dormant"
      >
        Dormant only
      </option>
    </select>
    <label
      class="flex items-center gap-1 text-sm text-gray-600"
    >
      Min flights
      :
      <input
        class="w-16 px-2 py-1 text-sm border border-gray-300 rounded"
        min="0"
        type="number"
        value=""
      />
    </label>
  </div>
  <div
    class="text-sm text-gray-500 mb-2"
  >
    2
     takeoffs
  </div>
  <div
    class="overflow-auto max-h-[70vh]"
  >
    <table
      class="w-full text-sm"
    >
      <thead>
        <tr>
          <th
            class="px-2 py-2 text-left text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Name
             
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Flights
             
            ↓
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Pilots
             
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            XC Potential
             
          </th>
          <th
            class="px-2 py-2 text-left text-xs font-medium text-gray-500 sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Season
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Record (km)
             
          </th>
          <th
            class="px-2 py-2 text-left text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Last Activity
             
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Weekend %
             
          </th>
        </tr>
      </thead>
      <tbody
        class="divide-y divide-gray-100"
      >
        <tr
          class="hover:bg-gray-50"
        >
          <td
            class="px-2 py-2"
          >
            <a
              class="text-blue-600 hover:underline font-medium"
              href="/takeoffs/1-bunloc"
            >
              Bunloc
            </a>
            <div
              class="flex flex-wrap gap-1 mt-0.5"
            >
              <span
                class="inline-block px-1.5 py-0.5 rounded text-[10px] font-medium bg-yellow-100 text-yellow-800"
              >
                100k Club
              </span>
              <span
                class="inline-block px-1.5 py-0.5 rounded text-[10px] font-medium bg-purple-100 text-purple-800"
              >
                XC Engine
              </span>
            </div>
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            500
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            80
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            90 km
          </td>
          <td
            class="px-2 py-2"
          >
            <div
              class="flex items-end gap-[1px] h-4"
            >
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 3.2px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 16px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
            </div>
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            312.5
          </td>
          <td
            class="px-2 py-2 text-gray-500 text-xs"
          >
            15.01.2025
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            60%
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50"
        >
          <td
            class="px-2 py-2"
          >
            <a
              class="text-blue-600 hover:underline font-medium"
              href="/takeoffs/2-sticlaria"
            >
              Sticlaria
            </a>
            <div
              class="flex flex-wrap gap-1 mt-0.5"
            >
              <span
                class="inline-block px-1.5 py-0.5 rounded text-[10px] font-medium bg-yellow-100 text-yellow-800"
              >
                100k Club
              </span>
              <span
                class="inline-block px-1.5 py-0.5 rounded text-[10px] font-medium bg-purple-100 text-purple-800"
              >
                XC Engine
              </span>
              <span
                class="inline-block px-1.5 py-0.5 rounded text-[10px] font-medium bg-blue-100 text-blue-800"
              >
                Weekend Site
              </span>
            </div>
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            200
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            40
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            85 km
          </td>
          <td
            class="px-2 py-2"
          >
            <div
              class="flex items-end gap-[1px] h-4"
            >
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 12px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 16px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
              <div
                class="w-1.5 bg-blue-400 rounded-t-sm"
                style="height: 1px;"
              />
            </div>
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            350.2
          </td>
          <td
            class="px-2 py-2 text-gray-500 text-xs"
          >
            15.01.2025
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            80%
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Snapshot: WingsTable matches snapshot 1`] = `
<div>
  <div
    class="flex flex-wrap gap-2 mb-3"
  >
    <input
      class="px-3 py-1.5 text-sm border border-gray-300 rounded-lg focus:ring-1 focus:ring-blue-500 focus:border-blue-500"
      placeholder="Search..."
      type="text"
      value=""
    />
    <select
      class="px-2 py-1.5 text-sm border border-gray-300 rounded-lg"
    >
      <option
        value="all"
      >
        All categories
      </option>
      <option
        value="B"
      >
        B
      </option>
      <option
        value="C"
      >
        C
      </option>
    </select>
    <label
      class="flex items-center gap-1 text-sm text-gray-600"
    >
      Min flights
      :
      <input
        class="w-16 px-2 py-1 text-sm border border-gray-300 rounded"
        min="0"
        type="number"
        value=""
      />
    </label>
  </div>
  <div
    class="text-sm text-gray-500 mb-2"
  >
    2
     
    wings
  </div>
  <div
    class="overflow-auto max-h-[70vh]"
  >
    <table
      class="w-full text-sm"
    >
      <thead>
        <tr>
          <th
            class="px-2 py-2 text-left text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Name
             
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Flights
             
            ↓
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Pilots
             
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Total KM
             
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Avg Distance
             
          </th>
          <th
            class="px-2 py-2 text-right text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Record (km)
             
          </th>
          <th
            class="px-2 py-2 text-left text-xs font-medium text-gray-500 cursor-pointer hover:text-gray-900 whitespace-nowrap sticky top-0 bg-white z-10 border-b border-gray-200"
          >
            Last Flight
             
          </th>
        </tr>
      </thead>
      <tbody
        class="divide-y divide-gray-100"
      >
        <tr
          class="hover:bg-gray-50"
        >
          <td
            class="px-2 py-2"
          >
            <a
              class="text-blue-600 hover:underline font-medium"
              href="/wings/1-nova-mentor-7"
            >
              Nova Mentor 7
            </a>
            <span
              class="ml-1.5 inline-block px-1.5 py-0.5 rounded text-[10px] font-medium bg-blue-100 text-blue-800"
            >
              B
            </span>
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            500
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            80
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            12.500
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            25 km
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            312.5
          </td>
          <td
            class="px-2 py-2 text-gray-500 text-xs"
          >
            15.01.2025
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50"
        >
          <td
            class="px-2 py-2"
          >
            <a
              class="text-blue-600 hover:underline font-medium"
              href="/wings/2-ozone-mantra-8"
            >
              Ozone Mantra 8
            </a>
            <span
              class="ml-1.5 inline-block px-1.5 py-0.5 rounded text-[10px] font-medium bg-yellow-100 text-yellow-800"
            >
              C
            </span>
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            200
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            30
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            8.000
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            40 km
          </td>
          <td
            class="px-2 py-2 text-gray-700 text-right"
          >
            250.5
          </td>
          <td
            class="px-2 py-2 text-gray-500 text-xs"
          >
            15.01.2024
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
